--- a/client/src/css/components/cart-item.css
+++ b/client/src/css/components/cart-item.css
@@ -7,6 +7,7 @@
     background-color: rgb(221, 219, 219);
     box-shadow: 0px 1px 0px rgba(129, 128, 128, 0.2);
     z-index: 8;
+    top: 0;
 }
 .quantity{
     padding-right: 5px;
