--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -48,5 +48,95 @@ section{
 
   }
 } 
+/* fa icons css*/
+.shopping-cart, .plus-circle{
+  font-size:1.4rem;
+}
+.plus-circle{
+margin-left: 20px;
+margin-right: 20px;
+}
+.trash{
+  font-size: 1.3rem;
+  color: rgb(207, 204, 204);
+}
+.caret-up, .caret-down{
+font-size: 1.1rem;
+cursor: pointer;
+color: rgb(74, 95, 105);
+}
+.external{
+font-size: 0.7rem;
+}
+/* footer css*/
+.footer{
+  display:block;
+  height: 70px;
+  margin-left: 10%;
+  width: 90%;
+  background-color: #aeb1b1;
+}
+.footer div:first-child{
+  position: absolute;
+  bottom: 3px;
+  left:0;
+  right: 0;
+}
 
+.social-links{
+  list-style: none;
+  display: flex;
+  width:70%;
+  justify-content: space-evenly;
+  margin: auto;
+  color:whitesmoke;
+  font-size: 1.3rem;
+}
+.social-links li{
+  cursor: pointer;
+  border-bottom: 3px solid transparent;
+} 
+.social-links li:hover{
+  border-bottom: 3px solid whitesmoke;
+} 
+
+.copy{
+  color: whitesmoke;
+  text-align: center;
+  font-size: 0.8rem;
+  padding-top: 5px;
+}
+
+/* page not found css*/
+
+.page-not-found{
+  margin-left: 10%;
+  margin-top: 100px;
+  min-height: 74vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.class404{
+text-align: center;
+font-size: 2rem;
+color: #5B6A6E;
+}
+
+@media (max-width:1000px){
+  .page-not-found{
+      margin-left: 0;
+  }
+}
+
+
+/* Admin page */
+.select-options{
+  display: block;
+  margin:auto;
+  border: 1px solid gray;
+  width: 50%;
+  height: 30px;
+}
 
